// Copyright 2024 JC-Lab
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package jclab.k8stpmkmsplugin.kms;
option go_package = "github.com/jc-lab/k8s-tpm-kms-plugin/kms";

message TpmWrappedData {
  repeated int32 pcrs = 9;
  bytes private_area = 10;
  bytes public_area = 11;
}

message KmsWrappedData {
  int32 version = 1;
  bytes key_id = 9;
  bytes encrypted_dek = 10;
  bytes nonce = 11;
  bytes ciphertext = 12;
}

message ExportFile {
  int32 version = 1;

  // pbkdf algorithm = 10;

  // salt
  // since version 1
  bytes salt = 11;
  // iteration count
  // since version 1
  int32 iteration = 12;

  // hash algorithm = 12;

  // crypto algorithm = 20

  // since version 1
  bytes iv = 21;
  bytes ciphertext = 22;
}
